oops, fixing an z-index issue in firefox

--- a/csf/recherche/static/css/style.scss
+++ b/csf/recherche/static/css/style.scss
@@ -54,7 +54,7 @@ body {
     height: 155px;
     line-height: 155px;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 #footer {
